--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
-  "name": "react-boilerplate",
+  "name": "cameramakers",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "eslint": "4.17.0",
     "eslint-config-airbnb": "^16.1.0",
+    "material-ui": "^0.20.0",
     "prop-types": "^15.6.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
