--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "cameramakers",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://misacorp.github.io/cameramakers",
   "dependencies": {
     "eslint": "4.17.0",
     "eslint-config-airbnb": "^16.1.0",
