Changed homepage to cameramakers.com, added dev notification

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "cameramakers",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://misacorp.github.io/cameramakers",
+  "homepage": "https://cameramakers.com",
   "dependencies": {
     "eslint": "4.17.0",
     "eslint-config-airbnb": "^16.1.0",
