--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "material-ui": "^0.20.0",
     "prop-types": "^15.6.0",
     "react": "^16.2.0",
+    "react-animate-height": "^1.0.1",
     "react-dom": "^16.2.0",
     "react-scripts": "1.1.1"
   },
