--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,12 @@ app/build
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+
+# Lambda
+# package directories
+lambda/node_modules
+lambda/jspm_packages
+
+# Serverless directories
+lambda/.serverless
