--- a/lambda/serverless.yml
+++ b/lambda/serverless.yml
@@ -10,6 +10,11 @@ provider:
   runtime: nodejs6.10
   stage: dev
   region: eu-west-1
+  iamRoleStatements:
+    - Effect: Allow
+      Action:
+        - ses:SendEmail
+      Resource: '*'
 
 # The `functions` block defines what code to deploy
 functions:
