--- a/app/package.json
+++ b/app/package.json
@@ -11,6 +11,7 @@
     "react": "^16.2.0",
     "react-animate-height": "^1.0.1",
     "react-dom": "^16.2.0",
+    "react-ga": "^2.4.1",
     "react-scripts": "1.1.1",
     "react-sizeme": "^2.4.2"
   },
