--- a/app/package.json
+++ b/app/package.json
@@ -13,7 +13,8 @@
     "react-dom": "^16.2.0",
     "react-ga": "^2.4.1",
     "react-scripts": "1.1.1",
-    "react-sizeme": "^2.4.2"
+    "react-sizeme": "^2.4.2",
+    "react-style-proptype": "^3.2.1"
   },
   "scripts": {
     "start": "react-scripts start",
